src/ui/invoice-action/invoice-action.module.scss
@use "../../styles/mixins" as *;
@use "../../styles/variables" as *;


.action{
    background-color: var(--overlay-bkg);
    padding-top: 2rem;
    max-width: 38.5rem;

    @include mid{
        border-radius: 0 1.25rem 1.25rem 0;
        padding: 3.6875rem 0 2rem 0;
    }

    &__title{
        @include heading-ml;
        margin-top: 1.625rem;
        margin-left: 1.5rem;

        @include mid{
            margin-left: 3.5rem;
        }
    }

    &__gradient{
        margin-top: 1.5rem;
        min-height: 4rem;
        width: 100%;
        background: linear-gradient(180deg, rgba(0, 0, 0, 0.00) 0%, rgba(0, 0, 0, 0.10) 100%);

        @include mid{
            display: none;
        }
    }
}

.fieldset{
    margin-top: 1.375rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    padding: 0 1.5rem;

    @include mid{
        padding: 0 3.5rem;
    }

    &__items{
        margin-top: 4.25rem;
    }

    &__legend{
        @include heading-sv;
        color: $purple;

        &--large{
            color: #777F98;
            font-size: 1.125rem;
            font-weight: 700;
            line-height: 1.78;
            letter-spacing: -0,375px;
        }
    }

    &__block{
        margin-top: 1.5rem;
        display: flex;
        flex-wrap: wrap;
        width: 100%;

        &--city{
            width: 46.5%;

            @include mid{
                width: 31.15%;
            }
        }

        &--postal{
            width: 46.5%;

            @include mid{
                width: 31.15%;
            }
        }

        &--country{
            @include mid{
                width: 31.15%;
            }
        }

        &--due{
            position: relative;
            
            @include tablet{
                width: 47.6%;
            }

            &::after{
                content: url("../../../public/icons/icon-calendar.svg");
                width: 1rem;
                height: 1rem;
                position: absolute;
                bottom: 1rem;
                right: 1rem;
            }
        }

        &--term{
            position: relative;
            
            @include tablet{
                width: 47.6%;
            }
        }
    }

    &__label{
        width: 100%;
        color: var(--action-lbl);
    }

    &__input{
        @include heading-sv;
        width: 100%;
        margin-top: 0.5rem;
        border: var(--input-border);
        border-radius: 0.25rem;
        padding: 0.9375rem 1.25rem 0.875rem;
        caret-color: $purple;
        background-color: var(--input-bkg);

        &:focus{
            border: 1px solid $purple;
            outline: none;
        }

        &[type="button"]{
            text-align: start;
        }
    }

    &--to{
        margin-top: 2.625rem;
    }
}

.calendar{
    display: none;
    width: 100%;
    position: absolute;
    top: calc(100% + 1.5rem);
    padding: 1.5rem 1.5rem 1rem 1.5rem;
    border-radius: 0.5rem;
    background-color: var(--input-bkg);
    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.25);

    &--show{
        display: block;
    }

    &__head{
        display: flex;
        align-items: center;
        justify-content: space-between;
    }

    &__previous{
        padding-right: 2rem;
    }

    &__next{
        padding-left: 2rem;
    }

    &__date{
        @include heading-sv;
    }

    &__dates{
        margin-top: 1.5rem;
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
    }

    &__day{
        @include heading-sv;
        text-align: center;
        width: 14%;

        &--red{
            color: $red;
        }

        &--padding{
            padding: 0.5rem 0;
        }
    }

    &__label{
        width: 100%;
        display: block;
        padding: 0.5rem 0;
        
        &:hover{
            cursor: pointer;
            color: $light-purple;
        }
    }

    &__radio{
        display: none;

        &:disabled{
            & + label{
                color: var(--calendar-disable);
                opacity: 0.2;
            }
        }

        &:checked{
            & + label{
                color: $purple;
            }
        }
    }
}

.select{
    width: 100%;
    box-shadow: 0px 10px 20px 0px rgba(72, 84, 159, 0.25);
    background-color: var(--input-bkg);
    border-radius: 0.5rem;
    display: none;
    position: absolute;
    top: calc(100% + 1.5rem);

    &--show{
        display: block;
    }

    &__option{
        @include heading-sv;
        width: 100%;
        text-align: start;
        padding: 0.9375rem 1.25rem 0.875rem;
        border-bottom: 1px solid var(--checkbox-bkg);

        &:first-of-type{
            border-radius: 0.5rem 0.5rem 0 0;
        }

        &:last-of-type{
            border-bottom: none;
            border-radius: 0 0 0.5rem 0.5rem;
        }
    }
}

.item{
    display: flex;
    flex-wrap: wrap;
    margin-top: 3rem;
    row-gap: 1.5625rem;
    justify-content: space-between;
    column-gap: 1rem;

    &:first-of-type{
        margin-top: 1.375rem;
    }

    &__container{
        margin: 0;

        &--name{

            &> input{
                margin-top: 0.935rem;
            }
        }

        &--qty{
            width: 19.57%;
        }

        &--price{
            width: 30.58%;
        }

        &--total{
            width: fit-content;
            margin-right: auto;
        }

        &--delete{
            width: fit-content;
        }
    }

    &__input{

        &--total{
            @include heading-sv;
            color: $gray;
            display: flex;
            position: relative;
            padding-top: 0.75rem;
        }
    }

    &__delete{
        padding-top: 1.25rem;
    }

    &__add{
        @include heading-sv;
        margin-top: 3rem;
        width: 100%;
        color: var(--action-lbl);
        padding: 1.1875rem 0 0.875rem;
        border-radius: 1.5rem;
    }
}

